<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:orientation="vertical"
    tools:context="com.example.bg.mybooks.PhoneLogin"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phlog6"
        android:textSize="30dp"
        android:textColor="@android:color/holo_green_dark"/>
    </LinearLayout>
        <LinearLayout
            android:id="@+id/lphn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="25dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/call_iconb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:layout_marginLeft="8dp"
                android:textSize="20dp"
                android:text="@string/phlog5" />
                <EditText
                    android:id="@+id/phno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:paddingLeft="10dp"
                    android:hint="@string/phlog1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="25dp"
            android:visibility="gone">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/phone_pass" />
            <EditText
                android:id="@+id/phcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:hint="@string/phlog2"
                android:paddingHorizontal="15dp"
                android:inputType="number"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="17dp"
            android:text="@string/phlog3"/>

        <Button
            android:id="@+id/sendbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/col3"
            android:text="@string/phlog4" />
    </LinearLayout>


</LinearLayout>
