<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bg.mybooks.myFile">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tool"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@color/colorWhite"
            android:background="@color/primary_material_dark"
            android:fitsSystemWindows="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/l1"
                app:layout_collapseMode="parallax">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selectBranch"
                        android:layout_margin="16dp"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/colorWhite"
                        />
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spBranch"
                        android:layout_margin="16dp"
                        android:gravity="center_horizontal"
                        android:backgroundTint="@color/colorWhite"

                        >

                    </Spinner>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/selectSem"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/colorWhite"/>
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spSem"
                        android:layout_margin="16dp"
                        android:gravity="center_horizontal"
                        android:backgroundTint="@color/colorWhite">
                    </Spinner>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/selectSubject"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/colorWhite"/>
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spSub"
                        android:layout_margin="16dp"
                        android:gravity="center_horizontal"
                        android:backgroundTint="@color/colorWhite">
                    </Spinner>
                </LinearLayout>

            </LinearLayout>


        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerview">

        </android.support.v7.widget.RecyclerView>

    </android.support.v4.widget.NestedScrollView>



</android.support.design.widget.CoordinatorLayout>
